[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/World/Map/CapturePoint.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="CapturePoint" type="Area2D" groups=["CapturePoint"]]
collision_layer = 128
collision_mask = 6
script = ExtResource( 1 )
selection = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_CapturePoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CapturePoint_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
